Bug 1947723 - Set correct focused window when swapping frameloaders. r=smaug, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D239761